fixed video covering nav

--- a/frontend/src/component/homepagecontent/HomePageContent.scss
+++ b/frontend/src/component/homepagecontent/HomePageContent.scss
@@ -37,7 +37,7 @@
     margin-left: 0px;
     padding-left: 0px;
     margin-right: 1px;
-    margin-top:-30px;
+    margin-top:10px;
   }
 
   /* scocial medias */
